# cproj_rm2

./: .gdbinit  .gitignore  CMakeLists.txt  Makefile  board.txt  cenv.sh  main.c  windebug.rdbg
game/: .gitignore  CMakeLists.txt
game/backup/: race_scene.c  race_scene.h
game/release/: CMakeCache.txt  Makefile  OpenGLApp  cmake_install.cmake
game/release/libs/glfw_win/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
game/release/libs/glfw_win/docs/: Doxyfile  Makefile  cmake_install.cmake
game/release/libs/glfw_win/src/: Makefile  cmake_install.cmake
game/res/models/: Fabulvania.blend  decentra.blend  decentra.blend1  decentra.mtl  gjerde.blend  gjerde.blend1  oldsroyal.blend  oldsroyal.blend1  oldsroyal.mtl  thoroughbred.blend  thoroughbred.blend1
game/res/pics/: button.png~
game/res/shaders/: mesh3D_v.glsl  selectionbox_f.glsl  selectionbox_g.glsl  selectionbox_v.glsl  sprite2D_f.glsl  sprite2D_v.glsl  text_f.glsl  text_v.glsl
game/src/: allocator.c  allocator.h  audio.c  audio.h  btn.c  btn.h  camera.h  car.h  file_util.c  file_util.h  game_main.c  game_state.c  game_state.h  glad.c  input_handler.c  input_handler.h  main.c  mesh3d.c  mesh3d.h  nums.c  nums.h  renderer.c  renderer.h  scenes.c  scenes.h  selection_box.c  selection_box.h  shader.c  shader.h  sprite2d.c  sprite2d.h  stb_image_impl.h  str_util.c  str_util.h  text.c  text.h  timer_util.c  timer_util.h  tinyobj_loader_c.h  udp_remote.c  (+4 more)
game/src/play/: bank.c  bank.h  bank.zig  body.h  car.c  car.h  car.zig  carfuncs.c  carfuncs.h  carfuncs.zig  carstats.zig  gm.c  gm.h  gm.zig  layer.zig  player.c  player.h  player.zig  regval.zig  rep.c  rep.h  rep.zig  upgrade.zig
game/src/scenes/: conversation_scene.c  conversation_scene.h  finish_scene.c  finish_scene.h  in_world_scene.c  in_world_scene.h  inventory_scene.c  inventory_scene.h  lobby_scene.c  lobby_scene.h  main_scene.c  main_scene.h  map_creator_scene.c  map_creator_scene.h  map_exploring_scene.c  map_exploring_scene.h  options_scene.c  options_scene.h  party_scene.c  party_scene.h  pause_menu_scene.c  pause_menu_scene.h  race_scene.c  race_scene.h  settlement_scene.c  settlement_scene.h  store_scene.c  store_scene.h  win_scene.c  win_scene.h
include/: stb_image.h
include/glad/: glad.h
libs/glfw/examples/: heightmap.c
server/: README.md
server/src/: sockets.tar
shaders/: mesh3d_f.glsl  mesh3d_v.glsl
src/: allocator.c  allocator.h  file_util.c  file_util.h  game_main.c  main.c  mesh3d.c  mesh3d.h  model_loader.c  model_loader.h  nums.h  player.c  player.h  renderer.c  renderer.h  shader.c  shader.h  sprite2d.c  sprite2d.h  str_util.c  str_util.h  tester.h  timer_util.c  timer_util.h  wav_loader.c  window.c  window.h
